# monatone

./: .gitignore  CHANGELOG.md  README.md  flake.nix  monatone.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/Monatone/: Common.hs  FLAC.hs  M4A.hs  MP3.hs  Metadata.hs  OGG.hs  Types.hs  Writer.hs
src/Monatone/FLAC/: Writer.hs
src/Monatone/M4A/: Writer.hs
src/Monatone/MP3/: Writer.hs
test/: Spec.hs
test/Test/: FLACSpec.hs  IntegrationSpec.hs  M4ASpec.hs  MP3Spec.hs  WriterSpec.hs
test/fixtures/: generate_test_files.hs  minimal.m4a
