cabal-version: 3.4
name: monatone
version: 0.1.0.0
synopsis: Audio metadata library
description: 
  Monatone is a pure Haskell library for parsing and writing metadata from audio files.
  .
  Supported formats:
  .
  * FLAC - Full support for reading and writing Vorbis comments
  * MP3 - ID3v1, ID3v2.3, and ID3v2.4 tag support (including APIC frames for album art)
  * OGG/Vorbis - Vorbis comment reading
  * Opus - Basic metadata support
  .
  Features:
  .
  * Pure Haskell implementation with no FFI dependencies
  * Streaming support for large files
  * Type-safe metadata representation
  * Comprehensive tag writing support for FLAC and MP3
homepage: https://github.com/rembo10/monatone
bug-reports: https://github.com/rembo10/monatone/issues
license: GPL-3.0-only
license-file: LICENSE
author: rembo10
maintainer: rembo10@users.noreply.github.com
category: Audio, Sound
stability: experimental
build-type: Simple
extra-source-files:
  README.md
extra-doc-files:
  CHANGELOG.md
tested-with: GHC == 9.10.3

source-repository head
  type: git
  location: https://github.com/rembo10/monatone

library
  exposed-modules:
    -- Core types and utilities
    Monatone.Types
    Monatone.Metadata
    -- Format-specific parsers
    Monatone.Common
    Monatone.FLAC
    Monatone.MP3
    Monatone.OGG
    -- Writing functionality
    Monatone.Writer
    Monatone.MP3.Writer
    Monatone.FLAC.Writer
  hs-source-dirs: src
  build-depends:
    base >= 4.17 && < 5,
    bytestring >= 0.11 && < 0.13,
    text >= 2.1 && < 2.2,
    binary >= 0.8 && < 0.9,
    containers >= 0.6 && < 0.9,
    unordered-containers >= 0.2 && < 0.3,
    mtl >= 2.2 && < 2.4,
    aeson >= 2.1 && < 2.4,
    directory >= 1.3 && < 1.4,
    filepath >= 1.4 && < 1.6,
    file-io >= 0.1 && < 0.2,
    deepseq >= 1.4 && < 1.6,
    base64-bytestring >= 1.2 && < 1.3
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable monatone 
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    monatone,
    text,
    aeson,
    bytestring,
    base64-bytestring,
    mtl,
    containers,
    filepath >= 1.4 && < 1.6
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints


test-suite monatone-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Test.FLACSpec,
    Test.MP3Spec,
    Test.WriterSpec,
    Test.IntegrationSpec
  hs-source-dirs: test
  build-depends:
    base,
    monatone,
    tasty >= 1.4 && < 1.6,
    tasty-hunit >= 0.10 && < 0.11,
    tasty-quickcheck >= 0.11 && < 0.12,
    QuickCheck >= 2.14 && < 2.17,
    bytestring,
    text,
    containers,
    mtl,
    directory,
    process,
    temporary,
    filepath >= 1.4 && < 1.6
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
